styles/layout/Navbar.module.scss
@import "../../theme/theme";

.navbar { 
    padding: 0 !important; 
    overflow: hidden; 
    background-color: $secondary;  
}
    .navbar_container { 
        height: 100px; 
        width: 100%; 
        overflow: hidden;  
    }
        .navbar_logo {
            position: relative;
            padding: 0; 
            width: 250px; 
            height: 100% !important;  
        }
            .navbar_logo_img { 
                min-height: 80px; 
                padding: 10px !important; 
            }
    
        // Menu Hamburger Button
        .hamburger_button { 
            position: fixed; 
            top: 50px; 
            right: 0; 
            width: 50px !important; 
            height: 50px !important; 
            padding: 10px; 
            background-color: $secondary !important; 
            fill: $light !important; 
            border-top-left-radius: 5px; 
        }
        .hamburger_button:hover { 
            background-color: $light !important; 
            fill: $secondary !important; 
        }

        // Profile Account Button
        .account_button { 
            position: fixed; 
            top: 50px; 
            right: 50px; 
            width: 50px !important; 
            height: 50px !important; 
            padding: 10px; 
            background-color: $secondary !important; 
            fill: $light !important; 
            border-top-left-radius: 5px; 
            border-top-right-radius: 5px;  
        }
        .account_button:hover { 
            background-color: $light !important; 
            fill: $secondary !important; 
        }
        
        .instagram_link_container { 
            position: fixed; 
            top: 50px; 
            right: 100px; 
            width: 50px !important; 
            height: 50px !important; 
        }
            .instagram_link_image {  
                background-color: $secondary !important; 
                padding: 10px !important; 
                border-top-left-radius: 5px; 
                border-top-right-radius: 5px; 
            }
            .instagram_link_image:hover { 
                background-color: $light !important; 
            }

        // Account Menu Container
        .account_menu_container {
            display: none;
            position: absolute; 
            z-index: 100; 
            top: 100px; 
            right: 0px; 
            width: 300px; 
            height: 200px; 
            background-color: $secondary;
            border-bottom-left-radius: 10px;  
        }
        .account_menu_full_container:hover > .account_menu_container { 
            display: block; 
        }
            .account_menu_body { 
                padding: 0 !important; 
            }

        // Page Menu Overlay
        .page_menu_container { 
            position: absolute; 
            z-index: 100; 
            top: 100px; 
            right: 0px; 
            width: 200px; 
            height: fit-content; 
            background-color: $light; 
            border-left: 2px solid $secondary; 
            border-bottom: 2px solid $secondary;
            border-bottom-left-radius: 10px; 
        }
            .page_menu_body { 
                padding: 0 !important; 
            }
    

